--- a/report.html
+++ b/report.html
@@ -39,7 +39,7 @@
     <h1>Work Term Report - Sharepoint Developer</h1>
     
     <h2>Introduction</h2>
-    <p>Hey, this was my first work term. As of S24 I was employed at the University of Guelph as a Sharepoint developer and worked under Judi McCuaig. I will use this opportunity to explain what I had done in this period and other facts about the workplace and the work itself. </p>
+    <p>Hey, this was my first work term. As of S24 I was employed at the University of Guelph as a Sharepoint developer and worked under Judi McCuaig. I will now use this opportunity to explain what I had done in this period and other facts about the workplace and the work itself. </p>
     
     <h2>Information about the Employer</h2>
     <div class="info-box">
